@@ -25,7 +25,8 @@ jextract {
 }
 
 compileJava {
-    options.compilerArgs << '-XDignore.symbol.file'
+    options.compilerArgs += ['-XDignore.symbol.file']
+    options.forkOptions.jvmArgs += ['-J--illegal-access=permit']
 }
 
 dependencies {
@@ -42,10 +43,10 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-nop:1.7.28'
 
     // Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.12'
-    testCompileOnly 'org.projectlombok:lombok:1.18.12'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    testCompileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 test {
